| |  _|  \| | | | | |  _ \| |_) |  _| | |     __) / _ \ \ /\ / /| |_  |  \| |
| |_| | |\  | |_| | | |_) |  __/| |___| |___ / __/ (_) \ V  V / |  _| | |\  |
 \____|_| \_|\___/  |____/|_|   |_____|_____|_____\___/ \_/\_/  |_|   |_| \_|
 http://service-technology.org/bpel2owfn - http://gnu.org/software/bpelo2wfn


Version 2.04-unreleased
=======================

* updated maintainer scripts

* fixed oWFN output (problems with nested `ALL_OTHER_PLACES_EMPTY')

* fixed bug #12110 (`https://gna.org/bugs/?12110'): compilation errors using
  GCC 4.3.1

* adapted the cleaning scripts

* renamed Makefile target `hu-prepare' to `cvs-clean'

* added `--bug' parameter

* neither Automake nor Autoconf set any gcc parameters

* removed `extension-data.*', because nobody will be working on this

* added Makefiles for a Manpage created by help2man

* fixed a small bug that yielded parse problems when strings appeared in
  `<documentation>' elements

* renamed generated configuration header to `config.h' to achieve
  compatibility with getopt and the sources generated by GNU gengetopt

* replaced previously patched files `getopt.c', `getopt.h', and `getopt1.c'
  by standard files from GNUlib

* changed versioning scheme from `x.y.z' to `x.yz' - next version ist 2.04

* completed task #6117 (`https://gna.org/task/?6117'): now using gengetopt to
  organize command line options

* completed task #6078 (`https://gna.org/task/?6078'): implement Woflan file
  format

* fixed bug #12126 (`https://gna.org/bugs/?12126'): `make distcheck' does not
  finish successfully

* added Makefile targets `patch' and `patched' to create and apply patches
  against the Gna! subversion repository
  (`https://gna.org/svn/?group=service-tech')

* added a parameter `decomp' and implemented rudimentary decomposition support

* removed unnecessary files `getopt.h', `getopt.c', and `getopt1.c' from
  `src' directory

* overworked the test cases

* added code coverage checks using LTP LCOV