@@ -9,6 +9,9 @@
 Version 2.04-unreleased
 =======================
 
+* fixed bug #1387 (`https://gna.org/bugs/?13837'): assertion failed if
+  choreographies are used without `communicationonly' parameter
+
 * updated maintainer scripts
 
 * fixed oWFN output (problems with nested `ALL_OTHER_PLACES_EMPTY')
